2002-08-13 15:00 J.H.M. Dassen (Ray) <jdassen@debian.org>
 autogen.sh:
  - Use automake 1.6 if available
 include/pqxx/Makefile.am:
  - New
 debian/rules:
  - Enable maintainer-mode for warnings
 debian/libpqxx-dev.dirs:
  - Dir for docs
 debian/libpqxx-dev.doc-base:
  - New
 debian/control:
  - Added section for source package
  - Added Build-depends on doxygen
 debian/.cvsignore:
  - New
 config/.cvsignore, include/pqxx/.cvsignore:
  - Updated
2002-08-11 22:00  Jeroen T. Vermeulen <jtv@xs4all.nl>
 Makefile.am:
  - added win32 directory to distribution
 include/pqxx/result.h, include/pqxx/tablewriter.h, test/test9.cxx, 
 test/test20.cxx:
  - tests cover all methods again, including remaining 3 (near-)trivial ones
2002-08-10 23:00  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/*:
  - Build procedure for Visual C++ 7 by Clinton James
 include/pqxx/compiler.h:
  - Visual C++ workarounds moved to win32 directory (Clinton James)
 include/pqxx/result.h, include/pqxx/tablewriter.h:
  - Patches by Clinton James to help Visual C++ 7 port, with modifications for
    gcc's sake
2002-08-11 22:00  Jeroen T. Vermeulen <jtv@xs4all.nl>
 debian/*:
  - Debianized by Ray Dassen
 */.cvsignore:
  - Added by Ray Dassen
 */Makefile.am, configure.ac:
  - Various cleanups by Ray Dassen
  - Added HTML reference documentation to distribution
2002-06-12 17:30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/transactionitf.cxx, test/test20.cxx:
  - Transaction is now detached from Connection on Commit or Abort
2002-06-12 16:30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.sgml:
  - Lots of documentation for Transactor
 include/pqxx/connection.h, include/pqxx/transactionitf.h:
  - More brief descriptions
2002-06-12 00:15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/nontransaction.h, include/pqxx/result.h, 
 include/pqxx/robusttransaction.h, include/pqxx/tablereader.h, 
 include/pqxx/tablestream.h, include/pqxx/tablewriter.h,
 include/pqxx/transaction.h, include/pqxx/transactionitf.h,